--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.40.2
-pandas==2.2.3
-numpy==2.1.3
-requests==2.32.3
-openpyxl==3.1.5
-xlsxwriter==3.2.0
-python-dateutil==2.9.0.post0
+streamlit>=1.36.0
+pandas>=2.1.0
+numpy>=1.26.0
+requests>=2.31.0
+openpyxl>=3.1.2
+python-dateutil>=2.9.0
